Fixed bug #43323 (Wrong count abstract methods). (Felipe, Dmitry)